--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-web": "~0.18.9",
+    "react-native-webview": "^11.26.0",
     "react-navigation": "^4.4.4",
     "react-router-dom": "^6.6.2",
     "styled-components": "^5.3.6"
@@ -34,6 +35,7 @@
     "@types/react-native": "~0.70.6",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "typescript": "^4.6.3"
   },
   "private": true
