--- a/package.json
+++ b/package.json
@@ -14,19 +14,28 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@react-navigation/stack": "^6.3.11",
+    "chart.js": "^4.1.2",
+    "d3": "^7.8.0",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-asset": "^2.0.1",
+    "react-native-canvas": "^0.1.38",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-pie": "^1.1.2",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.7.0",
     "react-native-web": "~0.18.9",
     "react-native-webview": "^11.26.0",
     "react-navigation": "^4.4.4",
     "react-router-dom": "^6.6.2",
+    "react-vis": "^1.11.12",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
